syntax = "proto3";

package admin.v1;

import "admin/v1/messages.proto";

service SandboxService {
  rpc UpsertSandboxVersion(admin.v1.UpsertSandboxVersionRequest) returns (admin.v1.UpsertSandboxVersionResponse) {}
}
