syntax = "proto3";

package sandbox.v1;

import "google/type/datetime.proto";
import "validate/validate.proto";

message SandboxVersion {
  string sandbox_name = 1;
  string sandbox_version = 2;
  string tf_version = 3;
  google.type.DateTime created_at = 4;
  google.type.DateTime updated_at = 5;
}

message UpsertSandboxVersionRequest {
  string id = 1 [(validate.rules).string = {
    uuid: true,
    ignore_empty: true
  }];
  string sandbox_name = 2;
  string sandbox_version = 3;
  string tf_version = 4;
}

message UpsertSandboxVersionResponse {
  repeated SandboxVersion sandboxes = 1;
}
